--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@metamask/providers": "^21.0.0",
     "ethers": "^6.13.5",
     "i18next": "^24.2.3",
     "react": "^19.0.0",
